<resources>
    <string name="app_name">Sorteia Nomes e Números</string>
    <string name="numbers">Números</string>
    <string name="names">Nomes</string>
    <string name="what_do_you_want_to_draw">O que você quer sortear?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="initial_number">Número inicial:</string>
    <string name="final_number">Número final:</string>
    <string name="how_many_numbers_to_draw">Sortear quantos números?</string>
    <string name="raffle">Sortear</string>
    <string name="add_nome">Adicionar nome</string>
    <string name="to_add">Adicionar</string>
    <string name="clear_list">Limpar lista</string>
    <string name="initial_number_field_cannot_be_empty">Campo número inicial não pode ser vazio</string>
    <string name="final_number_field_cannot_be_empty">Campo número final não pode ser vazio</string>
    <string name="field_cannot_be_empty">Campo não pode ser vazio</string>
    <string name="the_starting_number_is_greater_than_the_ending_number">O número inicial é maior que o número final</string>
</resources>